generated/checkers/gen/AllGen-Uninit-Data-90ca6956d3834db4060f87700e2fcbb699c4e4fd/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::cleanupIsFreeLike(const clang::CleanupAttr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:68:14: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   68 |     if (Name.contains_lower("free"))
      |              ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportUninitializedIfAny(clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:229:90: error: cannot convert ‘clang::SourceLocation’ to ‘const clang::ento::PathDiagnosticLocation&’
  229 |     R->addNote("Declare with '= NULL' to ensure cleanup handler is safe", VD->getLocation());
      |                                                                           ~~~~~~~~~~~~~~~^~
      |                                                                                          |
      |                                                                                          clang::SourceLocation
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:201:61: note:   initializing argument 2 of ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  201 |   void addNote(StringRef Msg, const PathDiagnosticLocation &Pos,
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
